<resources>
    <string name="app_name">Jadwal Sholat Statis</string>
    <string name="masjid_icon_desc">Ikon masjid</string>
    <string name="tanggal_placeholder">Tanggal</string>
    <string name="kota_placeholder">Kota</string>

    <string name="label_subuh">Subuh: %1$s</string>
    <string name="label_dzuhur">Dzuhur: %1$s</string>
    <string name="label_ashar">Ashar: %1$s</string>
    <string name="label_maghrib">Maghrib: %1$s</string>
    <string name="label_isya">Isya: %1$s</string>

    <string name="label_subuh_placeholder">Subuh: -</string>
    <string name="label_dzuhur_placeholder">Dzuhur: -</string>
    <string name="label_ashar_placeholder">Ashar: -</string>
    <string name="label_maghrib_placeholder">Maghrib: -</string>
    <string name="label_isya_placeholder">Isya: -</string>

    <string name="button_refresh">Tampilkan Jadwal</string>

    <string name="countdown_target">Menuju %1$s (%2$s)</string>
    <string name="countdown_remaining">Sisa waktu: %1$s</string>
    <string name="countdown_target_placeholder">Menuju sholat berikutnya</string>
    <string name="countdown_placeholder">Sisa waktu: --:--</string>
    <string name="countdown_notif_title">Menuju waktu %1$s</string>
    <string name="countdown_notif_message">⏳ %1$s lagi</string>
    <string name="countdown_notif_arrived_title">🕌 Waktu %1$s Telah Tiba</string>
    <string name="countdown_notif_arrived_message">Silakan menunaikan sholat.</string>
    <string name="countdown_channel_name">Countdown Sholat</string>

    <string name="notif_title">Waktu %1$s</string>
    <string name="notif_message">Masuk waktu sholat %1$s</string>
    <string name="notif_channel_name">Pengingat Sholat</string>
    <string name="reminder_enabled">Pengingat diaktifkan</string>
    <string name="reminder_disabled">Pengingat dimatikan</string>
    <string name="reminder_permission_needed">Izin notifikasi diperlukan agar pengingat aktif</string>
    <string name="permission_notification_granted">Izin notifikasi diberikan.</string>
    <string name="permission_notification_denied">Izin notifikasi ditolak. Fitur pengingat mungkin tidak berfungsi.</string>
    <string name="login_title">Login Sederhana</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_button">Masuk</string>
    <string name="login_fill_fields">Mohon isi username dan password.</string>
    <string name="login_success">Login berhasil.</string>
    <string name="menu_utama_title">Menu Utama</string>
    <string name="menu_utama_subtitle">Pilih fitur utama aplikasi di bawah ini.</string>
    <string name="menu_utama_lokasi_title">Form Input Lokasi</string>
    <string name="menu_utama_lokasi_hint">Masukkan lokasi/kota</string>
    <string name="menu_utama_lokasi_button">Simpan Lokasi</string>
    <string name="menu_utama_menu_title">Menu Cepat</string>
    <string name="menu_utama_jadwal">Buka Jadwal Sholat</string>
    <string name="menu_utama_countdown">Buka Countdown Sholat</string>
    <string name="menu_utama_pengingat">Buka Pengingat Sholat</string>
    <string name="lokasi_empty">Lokasi masih kosong.</string>
    <string name="lokasi_saved">Lokasi disimpan: %1$s</string>

    <string name="tentang_judul">Tentang Aplikasi</string>
    <string name="tentang_tujuan">Tujuan: Menampilkan jadwal sholat harian secara statis untuk kebutuhan demo akademik.</string>
    <string name="tentang_metode">Metode: Jadwal disimpan secara lokal tanpa API, GPS, atau database.</string>
    <string name="tentang_sumber">Sumber data: Jadwal contoh statis (3 kota).</string>
    <string name="tentang_nama">Nama: (Isi Nama Anda)</string>
    <string name="tentang_npm">NPM: (Isi NPM Anda)</string>

    <string-array name="kota_list">
        <item>Surabaya</item>
        <item>Jakarta</item>
        <item>Bandung</item>
    </string-array>
</resources>
